Fix black bars above toolbar in refresh UI

Regression introduced by f90ffcb3504223223f6b319c1bdbb75732943fd7 [formerly 5f4901a6981d8599a674983ac1b937f20ac954d1]

BUG=872045
TBR=pkasting

Change-Id: I83c8e283b0ec876e1545d0ed0f783a9953d03303
Reviewed-on: https://chromium-review.googlesource.com/1166260
Reviewed-by: Thomas Anderson <thomasanderson@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581437}
Former-commit-id: 08b040e4dad5db0f1e52ed5c5a83c3a9d4a30699